--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,338 @@
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height: 100% !important;
+  height: 100%;
+}
+body {
+  background-color: #ececec;
+}
+li {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+#Dash {
+  margin-left: 240px;
+  margin-top: 20px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 29px;
+}
+#userInfo img {
+  width: 40px;
+  margin-right: 20px;
+}
+
+#userImg {
+  border-radius: 50px;
+}
+
+#searchBox {
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #b0b0b0;
+  margin-right: 20px;
+  position: absolute;
+  right: 135px;
+  top: 15px;
+}
+.left-zone {
+  display: flex;
+  align-items: center;
+}
+#toggle {
+  cursor: pointer;
+}
+
+.text-light {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 44px;
+}
+
+#side-nav {
+  height: 100%;
+  overflow-y: scroll;
+  display: flex;
+  background: #020202;
+  border-right: 1px solid #272d51;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 25px;
+  position: fixed;
+  top: 0;
+  padding: 15px;
+  color: white;
+  width: 240px;
+}
+
+#side-nav::-webkit-scrollbar {
+  width: 10px;
+}
+
+.nav-link {
+  display: flex;
+  align-items: center;
+  color: #d4d5dd;
+  font-family: "Montserrat";
+  border-radius: 10px !important;
+  font-size: 14px;
+  padding: 12px;
+}
+
+.nav-list {
+  padding: 0px 40px 20px 0px;
+}
+
+#contentbox {
+  display: block !important;
+  width: 100%;
+  flex-direction: column;
+  top: 0;
+  float: right;
+  margin: auto;
+  transition: all 0.5s;
+  margin-top: 70px;
+  margin-left: 250px;
+  padding: 25px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 29px;
+}
+.nav_left_tab {
+  padding: 0;
+}
+.nav_left_tab li {
+  width: 100%;
+  margin-bottom: 8px;
+}
+
+.tab-pane {
+  margin-left: 275px;
+  margin-top: 20px;
+  transition: 0.6s;
+}
+.content_container {
+  max-width: 821px;
+  padding-left: 32px;
+  padding-right: 32px;
+  margin: auto;
+}
+
+.row {
+  display: flex;
+  justify-content: space-around;
+}
+
+.dash-logo img {
+  width: 200px;
+}
+
+.card-item {
+  padding: 20px;
+  width: 200px;
+  background-color: #ddefe0;
+  border-radius: 8px;
+}
+
+.card-item2 {
+  background-color: #f4ecdd;
+  padding: 20px;
+  width: 200px;
+  border-radius: 8px;
+}
+.card-item3 {
+  background-color: #efdada;
+  padding: 20px;
+  width: 200px;
+  border-radius: 8px;
+}
+
+.card-item4 {
+  background-color: #dee0ef;
+  padding: 20px;
+  width: 200px;
+  border-radius: 8px;
+}
+
+.card-text {
+  cursor: pointer;
+}
+.card-text h4 {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.card-text h2 {
+  font-size: 17px;
+  font-weight: 700;
+}
+.LineChart {
+  margin-left: 300px;
+  text-align: center;
+  margin-top: 30px;
+  background-color: rgb(250, 250, 250);
+  border-radius: 20px;
+}
+.PieChart {
+  width: 300px;
+  margin-left: 300px;
+  background-color: rgb(250, 250, 250);
+  border-radius: 20px;
+  margin-top: 30px;
+}
+.pieSection {
+  margin: auto;
+  justify-content: space-around;
+}
+
+.loginContainer {
+  display: flex;
+  justify-content: space-between;
+}
+.sideNav {
+  background-color: black;
+  width: 300px;
+  height: 100vh;
+}
+.sideNav p {
+  color: white;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 88px;
+  text-align: center;
+  position: absolute;
+  left: 50px;
+  top: 260px;
+  justify-content: center;
+}
+.loginPage {
+  text-align: justify;
+  height: 500px;
+  margin: auto;
+}
+
+#signIn {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 44px;
+}
+#innerSingin {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#AplleLogin {
+  display: flex;
+  background-color: rgb(255, 255, 255);
+  width: 150px;
+  padding: 10px;
+  border-radius: 10px;
+  justify-content: center;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+#AplleLogin p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #858585;
+  margin-left: 10px;
+}
+
+.loginBtn {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form {
+  margin-top: 20px;
+  background-color: white;
+  padding: 20px;
+  height: 400px;
+  border-radius: 10px;
+}
+
+form .txt_field {
+  position: relative;
+  margin: 30px 0;
+}
+.txt_field input {
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+  font-size: 16px;
+  background: #eaeaea;
+  border-radius: 10px;
+  border: none;
+}
+
+.txt_field p {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  padding: 5px;
+}
+.pass {
+  margin: -5px 0 20px 5px;
+  color: #346bd5;
+  cursor: pointer;
+}
+
+input[type="submit"] {
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: #000000;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
+}
+input[type="submit"]:hover {
+  border-color: #2691d9;
+  transition: 0.5s;
 }
